knowledgeCity0610/common/log/oldLog/runall_p15248.log.error.log
[CRITICAL]2021-05-11 13:32:46,478: import main_agv failed, path: agvCtrl cause a error: invalid syntax (agvApi.py, line 38)
pid=15248, ppid=9712, tid=14392
Traceback (most recent call last):
  File "run_all.py", line 39, in findModule
    __import__(m[1])
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\main_agv.py", line 10, in <module>
    import mapMgr
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\agvCtrl\mapMgr.py", line 25, in <module>
    import driver.seerAgv.agvCtrl as agvCtrl
  File "..\driver\seerAgv\agvCtrl.py", line 10, in <module>
    import driver.seerAgv.agvApi as agvApi
  File "..\driver\seerAgv\agvApi.py", line 38
    "robot_control_reloc_req": 2002,
                            ^
SyntaxError: invalid syntax

[CRITICAL]2021-05-11 13:32:46,479: import main_agv failed, path: agvCtrl ,cause invalid syntax (agvApi.py, line 38)
